--- a/task/src/pages/LogIn/login.css
+++ b/task/src/pages/LogIn/login.css
@@ -110,7 +110,6 @@
   border-radius: 50px;
   padding-left: 20px;
   font-family: "Mulish", sans-serif;
-  font-style: normal;
   font-weight: 400;
   font-size: 16px;
   color: #e0e0e0;
@@ -168,7 +167,7 @@
   height: 559px;
   display: flex;
   flex-direction: column;
-  gap: 60px;
+  gap: 58px;
   margin: 285px 0 0 290px;
 }
 
@@ -186,4 +185,24 @@
   font-weight: 400;
   font-size: 16px;
   color: #e0e0e0;
+}
+
+input[type="date"] {
+  padding: 18px 240px 20px 25px;
+  color: #e0e0e0;
+}
+
+input[type="date"]::placeholder,
+input[type="text"]::placeholder,
+input[type="password"]::placeholder {
+  font-family: "Mulish", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  color: #e0e0e0;
+}
+
+input[type="date"]::-webkit-calendar-picker-indicator {
+  display: none;
+  -webkit-appearance: none;
 }
