--- a/task/src/pages/LogIn/login.css
+++ b/task/src/pages/LogIn/login.css
@@ -225,3 +225,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   display: none;
   -webkit-appearance: none;
 }
+
+.erro {
+  border: #e9b425;
+}
