--- a/task/src/pages/LogIn/login.css
+++ b/task/src/pages/LogIn/login.css
@@ -15,6 +15,7 @@
   font-weight: 400;
   font-size: 60px;
   color: #e0e0e0;
+  background-color: transparent;
 }
 
 .title {
@@ -36,6 +37,7 @@
   font-weight: 400;
   font-size: 16px;
   color: #e0e0e0;
+  background-color: transparent;
 }
 
 .text {
@@ -57,6 +59,7 @@
   font-weight: 400;
   font-size: 30px;
   color: #e0e0e0;
+  background-color: transparent;
 }
 
 .content {
@@ -66,11 +69,14 @@
   box-shadow: 4px 4px 70px rgba(0, 0, 0, 0.25);
   width: 100%;
   height: 100vh;
+  background-color: transparent;
 }
+
 .container {
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: transparent;
 }
 
 .backgroundImage {
@@ -94,6 +100,7 @@
   align-items: center;
   margin-left: 285px;
   margin-top: 333px;
+  background-color: transparent;
 }
 
 .form {
@@ -104,6 +111,7 @@
   flex-direction: column;
   height: 800px;
   margin-top: -76px;
+  background-color: transparent;
 }
 
 .form div.inputLabel {
@@ -120,6 +128,7 @@
   font-weight: 400;
   font-size: 16px;
   color: #e0e0e0;
+  background-color: transparent;
 }
 
 .formLogin {
@@ -130,6 +139,7 @@
   flex-direction: column;
   height: 380px;
   width: 369px;
+  background-color: transparent;
 }
 
 .imgContainer {
@@ -140,6 +150,7 @@
   align-items: center;
   flex-direction: column;
   gap: 70px;
+  background-color: transparent;
 }
 
 .write,
@@ -196,6 +207,7 @@ form input.buttonRegister {
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: transparent;
 }
 
 .text-container p {
@@ -226,6 +238,12 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   -webkit-appearance: none;
 }
 
-.erro {
+input:invalid {
   border: #e9b425;
+  color: #e9b425;
+}
+
+div,
+img {
+  background-color: transparent;
 }
