--- a/task/src/components/Header/header.css
+++ b/task/src/components/Header/header.css
@@ -67,7 +67,7 @@
 }
 
 .logout p {
-  font-family: "Mulish";
+  font-family: "Mulish", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 17px;
