--- a/task/src/pages/Planner/planner.css
+++ b/task/src/pages/Planner/planner.css
@@ -5,7 +5,86 @@
   box-sizing: border-box;
 }
 
+.AddDelete {
+  width: 433px;
+  height: 44px;
+  display: flex;
+  flex-direction: row;
+  float: right;
+  gap: 24px;
+  margin-right: 23px;
+  margin-top: -7px;
+}
+
+button {
+  width: 200px;
+  border-radius: 10px;
+  border: none;
+  font-family: "Mulish";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 20px;
+  color: #fff;
+}
+
+.add {
+  background-color: #00ba88;
+}
+
+.delete {
+  background-color: #ff3d1f;
+}
+
+.selecionar {
+  height: 45px;
+  width: 757px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+select {
+  border: 1px solid #fece00;
+  border-radius: 10px;
+  margin-top: 35px;
+  color: #000000b2;
+  font-family: "Mulish";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  padding-top: 12px;
+  padding-left: 8px;
+}
+
+.dias {
+  margin-left: 418px;
+  width: 240px;
+}
+
+.horario {
+  width: 120px;
+  margin-left: 3px;
+}
+
+.textarea {
+  position: absolute;
+  width: 391px;
+  height: 45px;
+  left: 24px;
+  top: 165px;
+  border: 1px solid #fece00;
+  border-radius: 10px;
+  color: #000000b2;
+  font-family: "Mulish";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  resize: none;
+  padding-top: 12px;
+  padding-left: 14.28px;
+}
+
 .imgUol {
   margin-left: 1224px;
-  margin-top: 317px;
+  margin-top: 234px;
 }
