--- a/task/src/pages/Planner/planner.css
+++ b/task/src/pages/Planner/planner.css
@@ -13,7 +13,7 @@
   float: right;
   gap: 24px;
   margin-right: 23px;
-  margin-top: -7px;
+  margin-top: -42px;
 }
 
 button {
@@ -41,19 +41,20 @@ button {
   display: flex;
   flex-direction: row;
   align-items: center;
+  margin-top: 35px;
 }
 
 select {
   border: 1px solid #fece00;
   border-radius: 10px;
-  margin-top: 35px;
   color: #000000b2;
   font-family: "Mulish";
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
-  padding-top: 12px;
+  padding-top: 2px;
   padding-left: 8px;
+  height: 45px;
 }
 
 .dias {
@@ -84,7 +85,76 @@ select {
   padding-left: 14.28px;
 }
 
+.semana {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  width: 1698px;
+  height: 33px;
+  margin-left: 125px;
+  margin-top: 22px;
+}
+
+label {
+  width: 240px;
+  height: 33px;
+  left: 125px;
+  top: 232px;
+  box-shadow: 0px 4px 24px rgba(168, 168, 168, 0.25);
+  border-radius: 9px 9px 0px 0px;
+  font-family: "Mulish";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 20px;
+  padding: 2px 0 0 9px;
+}
+
+.monday {
+  background-color: #ff0024;
+}
+
+.tuesday {
+  background-color: #ff8000;
+}
+
+.wednesday {
+  background-color: #ffce00;
+}
+
+.thursday {
+  background-color: rgba(255, 0, 36, 0.7);
+}
+
+.friday {
+  background-color: rgba(255, 128, 0, 0.7);
+}
+
+.saturday {
+  background-color: rgba(255, 206, 0, 0.7);
+}
+
+.sunday {
+  background-color: rgba(255, 0, 36, 0.5);
+}
+
+.timeBox {
+  width: 85px;
+  height: 75px;
+  background: #fff;
+  box-shadow: 0px 4px 24px rgba(168, 168, 168, 0.25);
+  border-radius: 10px;
+  font-family: "Mulish";
+  font-style: normal;
+  font-weight: 800;
+  font-size: 17px;
+  color: #000;
+  padding: 25px 0 0 20px;
+  float: left;
+  margin-left: 24px;
+}
+
 .imgUol {
   margin-left: 1224px;
-  margin-top: 234px;
+  margin-top: 107px;
 }
