--- a/task/src/components/Header/header.css
+++ b/task/src/components/Header/header.css
@@ -4,6 +4,8 @@
   background-color: #fff;
   box-shadow: 0px 4px 24px rgba(168, 168, 168, 0.251);
   position: relative;
+  display: flex;
+  flex-direction: row;
 }
 
 .weeklyText {
